<resources>
    <string name="app_name">Kotlin</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="help">help</string>
    <string name="register">register</string>
    <string name="log_in">Log in</string>
    <string name="user123">user123</string>
    <string name="super_secret">super-secret</string>
    <string name="user_example_com">user@example.com</string>
    <string name="exit">Return</string>
    <string name="no_se_que_poner_pero_me_obligan_wey">NO SE QUE PONER PERO ME OBLIGAN WEY</string>
    <string name="restore_password">Enviando contraseña a :</string>
    <string name="logout">LogOut</string>

    <!-- RECURSOS PARA LAS CALSES -->
    <string name="datos_incompletos">Debe completar todos los datos para inciar sesion</string>
    <string name="proximamente">Proximamente...</string>
    <string name="usuario_no_registrado">Su usuario no se encuentra registrado</string>

    <!-- USUARIO DE PRUEBA -->
    <string name="admin_user">admin</string>
    <string name="admin_password">admin</string>
    <string name="admin_email">admin@admin.com</string>
</resources>